test/sema/builtin-type-no-auto-reference.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func foo(ref_i: int&) { }

func main() {
    let i = 42;
    // CHECK: [[@LINE+1]]:9: error: invalid argument #1 type 'int' to 'foo', expected 'int&'
    foo(i);
}
